# drone-racing-msgs

./: .gitignore  LICENSE  README.md
drone_racing_msgs/: CMakeLists.txt  bridge_mapping.yaml  package.xml
drone_racing_msgs/msg/: ControlCommand.msg  CtbrSetpoint.msg  Detection.msg  DetectionList.msg  DroneState.msg  DroneStateImage.msg  EulerAngles.msg  Gate.msg  GateCenters.msg  GateList.msg  GatePose.msg  GatePoseList.msg  GatePoses.msg  LinVelSetpoint.msg  Maneuver.msg  MotorsThrustSetpoint.msg  ObjectList.msg  QualisysMeasure.msg  RGBImage.msg  RcChannels.msg  SensorAccel.msg  SensorBattery.msg  SensorGyro.msg  SensorImu.msg  SensorMag.msg  SensorRpm.msg  SetpointCtbr.msg  SetpointLinVel.msg  SetpointMotorsThrust.msg  SetpointReference.msg  State.msg  Trajectory.msg  TrajectoryPoint.msg  VehicleAttitude.msg
